--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,7 +4,11 @@
     "pages": {
         "catalog": "Каталог площадок", 
         "turnkey": "Размещение под ключ",
-        "platformOwner": "Владельцу площадки"
+        "platformOwner": "Владельцу площадки",
+        "wallet": "Кошелёк",
+        "languages": "",
+        "addPlatform": "Добавить канал",
+        "calculateIncome": "Рассчитать доход"
     },
     "main_page_advertiser": {
         "title": "Рекламные размещения в соцсетях без хлопот",
