feat: add section How It works, Customers

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -157,8 +157,31 @@
                     {"option": "Максимальный охват вашей ЦА", "available": true}
                 ]
             }
+        ],
+        "customers": "Что о нас пишут наши клиенты:", 
+        "reviews": [
+            {
+                "name": "Кадамов Роман",
+                "workplace": "CocaCola Uzbekistan",
+                "rate": 5,
+                "img": "customer1.jpg",
+                "text": "Продажа рекламы на этом маркетплейсе - настоящая находка! Отличная платформа для продвижения бренда. Прозрачные условия сделок, эффективное взаимодействие с клиентами и высококачественная аналитика. Рекомендую всем, кто стремится увеличить видимость своего бизнеса."
+            },
+            {
+                "name": "Каримов Дамир",
+                "workplace": "Uzbekistan Airways",
+                "rate": 5,
+                "img": "customer2.jpg",
+                "text": "Очень доволен результатами работы на этом маркетплейсе. Продажа рекламы здесь - это не только эффективный способ привлечения новых клиентов, но и приятное взаимодействие с профессиональной командой поддержки. Платформа предоставляет уникальные возможности для масштабирования рекламных кампаний."
+            },
+            {
+                "name": "Хамидов Мардонбек",
+                "workplace": "Кальян хаус",
+                "rate": 5,
+                "img": "customer3.jpg",
+                "text": "Этот маркетплейс стал для меня надежным партнером в сфере продажи рекламы. Интуитивно понятный интерфейс, широкие возможности таргетирования и отличная видимость результатов. Сотрудничество с ним стало ключевым элементом моей рекламной стратегии. Спасибо за отличный сервис!"
+            }
         ]
-    
 
     }
 }
