feat: add DropdownMenu in Header

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,6 +10,12 @@
         "addPlatform": "Добавить канал",
         "calculateIncome": "Рассчитать доход"
     },
+
+    "roles": {
+        "blogger": "Блогер",
+        "advertiser": "Рекламодатель"
+    },
+
     "main_page_advertiser": {
         "title": "Рекламные размещения в соцсетях без хлопот",
         "subtitle": "Только активные, проверенные вручную площадки",
