feat: add autoclose of dropdown components, add burger icon

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,8 @@
 {
     "registration":"Регистрация",
     "login":"Войти",
+    "logout":"Выход",
+
     "pages": {
         "catalog": "Каталог площадок", 
         "turnkey": "Размещение под ключ",
@@ -15,6 +17,24 @@
         "blogger": "Блогер",
         "advertiser": "Рекламодатель"
     },
+
+    "profile": {
+        "messages": "Мои сообщения",
+        "data": "Мои данные",
+        "settings": "Настройки профиля"
+    },
+
+    "wallet": {
+        "balance": "Баланс",
+        "symbol": "сум",
+        "add_funds": "Пополнить",
+        "withdraw ": "Вывести",
+        "history": "История транзакций",
+        "invoice": "Счета и договора"
+
+    },
+
+
 
     "main_page_advertiser": {
         "title": "Рекламные размещения в соцсетях без хлопот",
