feat: move blocks to widgets, add new feats (to Do Btns ), remove useless featLists, add Swiper in partherList & customerList

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,9 @@
     "registration":"Регистрация",
     "login":"Войти",
     "logout":"Выход",
+    "buy": "Купить",
+    "btn_catalog": "Каталог площадок",
+    "btn_start_adv": "Запустить рекламу",
 
     "pages": {
         "catalog": "Каталог площадок", 
@@ -31,15 +34,15 @@
         "withdraw ": "Вывести",
         "history": "История транзакций",
         "invoice": "Счета и договора"
-
     },
 
 
 
     "main_page_advertiser": {
-        "title": "Рекламные размещения в соцсетях без хлопот",
-        "subtitle": "Только активные, проверенные вручную площадки",
-        "options": [
+
+        "cta_title": "Рекламные размещения в соцсетях без хлопот",
+        "cta_subtitle": "Только активные, проверенные вручную площадки",
+        "cta_list": [
             {
                 "option": "Алгоритмы подбора целевой аудитории и подходящих площадок для вашей рекламы", 
                 "img": "option1.svg"
@@ -53,9 +56,9 @@
                 "img": "option3.svg"
             }
         ],
-        "btn_catalog": "Каталог площадок",
-        "services": "Работаем с юрлицами, предоставляем счета, акты, ведём электронный документооборот через didox.uz",
-        "basic_information": [
+
+        "services_title": "Работаем с юрлицами, предоставляем счета, акты, ведём электронный документооборот через didox.uz",
+        "services_list": [
            { 
                 "info": "Проверенных вручную площадок", 
                 "count": "784+",
@@ -77,8 +80,8 @@
                 "img": "info4.svg"
             }
         ],
-        "confidence": "Нам доверяют:",
-        "partners": [
+        "partners_title": "Нам доверяют:",
+        "partners_list": [
             {"img": "partner1.svg"},
             {"img": "partner2.svg"},
             {"img": "partner3.svg"},
@@ -86,17 +89,16 @@
             {"img": "partner5.svg"},
             {"img": "partner6.svg"}
         ],
-        "how_it_work": "Как это работает?",
-        "stages": [
+        "how_title": "Как это работает?",
+        "how_list": [
             {"stage": "Зарегистрируйтесь в сервисе"},
             {"stage": "Выберите подходящие площадки в каталоге"},
             {"stage": "Пополните баланс удобным способом"},
             {"stage": "Создайте размещение самостоятельно или сгенерируйте пост с помощью искусственного интеллекта"},
             {"stage": "Владелец площадки опубликует пост и пришлет вам на проверку"}
         ],
-        "btn_registration": "Регистрация",
-        "why": "Почему с нами эффективнее?",
-        "accomms": [
+        "why_title": "Почему с нами эффективнее?",
+        "accomms_list": [
             {
                 "type":"self",
                 "title": "Самостоятельное размещение",
@@ -120,20 +122,19 @@
                     {"stage": "Получайте оповещение о каждом размещении"},
                     {"stage": "Платформа гарантирует сохранность ваших средств пока не будут выполнены все условия размещения"}
                 ],
-                "save": "Экономьте время и деньги",
-                "btn_start": "Запустить рекламу"
+                "save": "Экономьте время и деньги"
+
             }
         ],
         
-        "start_advertising": "Запускаем рекламу под ключ",
-        "choose_tarif": "Выберите тариф и персональный менеджер сделает все за вас",
-        "tarif_info": "Услуги менеджера предоставляются в качестве бонуса. Весь бюджет идёт на покупку интеграций в каталоге Vencom",
-        "tarifs": [
+        "turnkey_title": "Запускаем рекламу под ключ",
+        "turnkey_subtitle": "Выберите тариф и персональный менеджер сделает все за вас",
+        "turnkey_text": "Услуги менеджера предоставляются в качестве бонуса. Весь бюджет идёт на покупку интеграций в каталоге Vencom",
+        "tarifs_list": [
             {
                 "name": "Начальный",
                 "views": "от 60 000 просмотров",
                 "price": "1 250 000 сум",
-                "btn": "Купить",
                 "info": "Базовый вариант для оценки работы сервиса или небольших рекламных кампаний",
                 "options":[
                     {"option": "Ручной подбор площадок", "available": true},
@@ -151,7 +152,6 @@
                 "name": "Стандартый",
                 "views": "от 300 000 просмотров",
                 "price": "5 500 000 сум",
-                "btn": "Купить",
                 "info": "Оптимальный тариф для продвижения малого бизнеса",
                 "options":[
                     {"option": "Ручной подбор площадок", "available": true},
@@ -169,7 +169,6 @@
                 "name": "Комплексный",
                 "views": "от 1 000 000 просмотров",
                 "price": "15 300 000 сум",
-                "btn": "Купить",
                 "info": "Комплексный тариф для средних и больших рекламных кампаний",
                 "options":[
                     {"option": "Ручной подбор площадок", "available": true},
@@ -184,26 +183,42 @@
                 ]
             }
         ],
-        "customers": "Что о нас пишут наши клиенты:", 
-        "reviews": [
+        "customers_title": "Что о нас пишут наши клиенты:", 
+        "customers_list": [
             {
                 "name": "Кадамов Роман",
                 "workplace": "CocaCola Uzbekistan",
-                "rate": 5,
                 "img": "customer1.jpg",
                 "text": "Продажа рекламы на этом маркетплейсе - настоящая находка! Отличная платформа для продвижения бренда. Прозрачные условия сделок, эффективное взаимодействие с клиентами и высококачественная аналитика. Рекомендую всем, кто стремится увеличить видимость своего бизнеса."
             },
             {
                 "name": "Каримов Дамир",
                 "workplace": "Uzbekistan Airways",
-                "rate": 5,
                 "img": "customer2.jpg",
                 "text": "Очень доволен результатами работы на этом маркетплейсе. Продажа рекламы здесь - это не только эффективный способ привлечения новых клиентов, но и приятное взаимодействие с профессиональной командой поддержки. Платформа предоставляет уникальные возможности для масштабирования рекламных кампаний."
             },
             {
                 "name": "Хамидов Мардонбек",
                 "workplace": "Кальян хаус",
-                "rate": 5,
+                "img": "customer3.jpg",
+                "text": "Этот маркетплейс стал для меня надежным партнером в сфере продажи рекламы. Интуитивно понятный интерфейс, широкие возможности таргетирования и отличная видимость результатов. Сотрудничество с ним стало ключевым элементом моей рекламной стратегии. Спасибо за отличный сервис!"
+            },
+
+            {
+                "name": "customer 1",
+                "workplace": "CocaCola Uzbekistan",
+                "img": "customer1.jpg",
+                "text": "Продажа рекламы на этом маркетплейсе - настоящая находка! Отличная платформа для продвижения бренда. Прозрачные условия сделок, эффективное взаимодействие с клиентами и высококачественная аналитика. Рекомендую всем, кто стремится увеличить видимость своего бизнеса."
+            },
+            {
+                "name": "customer 2",
+                "workplace": "Uzbekistan Airways",
+                "img": "customer2.jpg",
+                "text": "Очень доволен результатами работы на этом маркетплейсе. Продажа рекламы здесь - это не только эффективный способ привлечения новых клиентов, но и приятное взаимодействие с профессиональной командой поддержки. Платформа предоставляет уникальные возможности для масштабирования рекламных кампаний."
+            },
+            {
+                "name": "customer 3",
+                "workplace": "Кальян хаус",
                 "img": "customer3.jpg",
                 "text": "Этот маркетплейс стал для меня надежным партнером в сфере продажи рекламы. Интуитивно понятный интерфейс, широкие возможности таргетирования и отличная видимость результатов. Сотрудничество с ним стало ключевым элементом моей рекламной стратегии. Спасибо за отличный сервис!"
             }
