--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,7 +4,9 @@
     "logout":"Выход",
     "buy": "Купить",
     "btn_catalog": "Каталог площадок",
+    "btn_add_platform": "Добавить канал",
     "btn_start_adv": "Запустить рекламу",
+
 
     "pages": {
         "catalog": "Каталог площадок", 
@@ -27,19 +29,44 @@
         "settings": "Настройки профиля"
     },
 
+    "symbol": "сум",
+
     "wallet": {
         "balance": "Баланс",
-        "symbol": "сум",
         "add_funds": "Пополнить",
         "withdraw ": "Вывести",
         "history": "История транзакций",
         "invoice": "Счета и договора"
     },
 
+    "burger_menu": {
+        "services": "Сервисы", 
+        "catalog": "Каталог площадок", 
+        "turnkey": "Размещение под ключ",
+        "addPlatform": "Добавить канал",
+        "calculateIncome": "Рассчет доход",
+
+        "campaign": "Мои Рекламные компании",
+        "saved": "Сохранненые",
+        "manager": "Работа с менеджерами",
+        "template": "Шаблоны постов",
+
+        "channels": "Мои каналы",
+        "offers": "Мои заявки", 
+
+        "wallet": "Кошелёк",
+
+        "add_funds": "Пополнение кошелька",
+        "withdraw": "Вывести деньги",
+        "history": "История транзакций",
+        "invoice": "Счета и договора",
+
+        "base": "База знаний (гайды-URL)"
+    },
 
 
     "main_page_advertiser": {
-
+        "main_img": "mainAdv.png", 
         "cta_title": "Рекламные размещения в соцсетях без хлопот",
         "cta_subtitle": "Только активные, проверенные вручную площадки",
         "cta_list": [
@@ -183,6 +210,164 @@
                 ]
             }
         ],
+        "customers_title": "Что о нас пишут наши клиенты:", 
+        "customers_list": [
+            {
+                "name": "Кадамов Роман",
+                "workplace": "CocaCola Uzbekistan",
+                "img": "customer1.jpg",
+                "text": "Продажа рекламы на этом маркетплейсе - настоящая находка! Отличная платформа для продвижения бренда. Прозрачные условия сделок, эффективное взаимодействие с клиентами и высококачественная аналитика. Рекомендую всем, кто стремится увеличить видимость своего бизнеса."
+            },
+            {
+                "name": "Каримов Дамир",
+                "workplace": "Uzbekistan Airways",
+                "img": "customer2.jpg",
+                "text": "Очень доволен результатами работы на этом маркетплейсе. Продажа рекламы здесь - это не только эффективный способ привлечения новых клиентов, но и приятное взаимодействие с профессиональной командой поддержки. Платформа предоставляет уникальные возможности для масштабирования рекламных кампаний."
+            },
+            {
+                "name": "Хамидов Мардонбек",
+                "workplace": "Кальян хаус",
+                "img": "customer3.jpg",
+                "text": "Этот маркетплейс стал для меня надежным партнером в сфере продажи рекламы. Интуитивно понятный интерфейс, широкие возможности таргетирования и отличная видимость результатов. Сотрудничество с ним стало ключевым элементом моей рекламной стратегии. Спасибо за отличный сервис!"
+            },
+
+            {
+                "name": "customer 1",
+                "workplace": "CocaCola Uzbekistan",
+                "img": "customer1.jpg",
+                "text": "Продажа рекламы на этом маркетплейсе - настоящая находка! Отличная платформа для продвижения бренда. Прозрачные условия сделок, эффективное взаимодействие с клиентами и высококачественная аналитика. Рекомендую всем, кто стремится увеличить видимость своего бизнеса."
+            },
+            {
+                "name": "customer 2",
+                "workplace": "Uzbekistan Airways",
+                "img": "customer2.jpg",
+                "text": "Очень доволен результатами работы на этом маркетплейсе. Продажа рекламы здесь - это не только эффективный способ привлечения новых клиентов, но и приятное взаимодействие с профессиональной командой поддержки. Платформа предоставляет уникальные возможности для масштабирования рекламных кампаний."
+            },
+            {
+                "name": "customer 3",
+                "workplace": "Кальян хаус",
+                "img": "customer3.jpg",
+                "text": "Этот маркетплейс стал для меня надежным партнером в сфере продажи рекламы. Интуитивно понятный интерфейс, широкие возможности таргетирования и отличная видимость результатов. Сотрудничество с ним стало ключевым элементом моей рекламной стратегии. Спасибо за отличный сервис!"
+            }
+        ]
+
+    },
+
+    "main_page_blogger": {
+        "main_img": "mainBlogger.png", 
+        "cta_title": "Добавьте канал сейчас и получите заказ.",
+        "cta_subtitle": "Открой канал для заказов. Просто. Бèстро. Доходно.",
+        "cta_list": [
+            {
+                "option": "Постоянно растущие количество рекламодателей для ваших каналов", 
+                "img": "option4.svg"
+            },
+            {   
+                "option": "Статистика по каждому каналу для эффективного анализа вашего контента", 
+                "img": "option5.svg"
+            },
+            {
+                "option": "Быстрая и легальная системы вывода средств", 
+                "img": "option6.svg"
+            }
+        ],
+
+        "services_title": "Работаем с юрлицами, предоставляем счета, акты, ведём электронный документооборот через didox.uz",
+        "services_list": [
+           { 
+                "info": "Активных рекламодателей", 
+                "count": "784+",
+                "img": "info1.svg"
+            },
+           { 
+                "info": "Выполненных заказов ", 
+                "count": "42 309+",
+                "img": "info2.svg"
+            },
+           { 
+                "info": "Сэкономленных средств рекламодателя", 
+                "count": "2,93 млрд",
+                "img": "info3.svg"
+            },
+           { 
+                "info": "Довольных рекламодателей", 
+                "count": "1230+",
+                "img": "info4.svg"
+            }
+        ],
+        "partners_title": "Нам доверяют:",
+        "partners_list": [
+            {"img": "partner1.svg"},
+            {"img": "partner2.svg"},
+            {"img": "partner3.svg"},
+            {"img": "partner4.svg"},
+            {"img": "partner5.svg"},
+            {"img": "partner6.svg"}
+        ],
+        "how_title": "Как это работает?",
+        "how_list": [
+            {"stage": "Зарегистрируйтесь в сервисе"},
+            {"stage": "Выберите подходящие площадки в каталоге"},
+            {"stage": "Пополните баланс удобным способом"},
+            {"stage": "Создайте размещение самостоятельно или сгенерируйте пост с помощью искусственного интеллекта"},
+            {"stage": "Владелец площадки опубликует пост и пришлет вам на проверку"}
+        ],
+        "why_title": "Почему с нами эффективнее?",
+        "accomms_list": [
+            {
+                "type":"self",
+                "title": "Самостоятельное размещение",
+                "stages": [
+                    {"stage": "Трудозатраты на постоянный поиск рекламодателей"},
+                    {"stage": "Непредсказуемый доход, поскольку трафик рекламодателей ограничен вашими возможностями"},
+                    {"stage": "Низкая гарантия оплаты"},
+                    {"stage": "Нет автоматизации процессов на всех этапах сделки"},
+                    {"stage": "Трата времени на рекламодателей, которые в итоге не купят"}
+                ]
+            },
+            {
+                "type":"vencom",
+                "title": "Размещение с Vencom",
+                "stages": [
+                    {"stage": "Постоянный поток крупных рекламодателей"},
+                    {"stage": "Гарантированная оплата"},
+                    {"stage": "Эффективная фильтрация рекламодателей, до вас дойдут только те, кто уже оплатил заказ"},
+                    {"stage": "Избавление от нужды в общении с мошенниками под видом рекламодателей"},
+                    {"stage": "Автоматизация всех процессов сделки"},
+                    {"stage": "Многократное увеличение доходнисти вашей площадки"}
+                ],
+                "save": "Экономьте время и деньги"
+
+            }
+        ],
+        
+        "calculate_title": "Рассчитаем доходность канала",
+        "calculate_subtitle": "Укажите тематику вашего канала или блога и количество подписчиков",
+        "calculate_text": "Полученные значения являются предполагаемыми и могут варьироваться от многих других факторов",
+
+        "card": {
+            "title": "Рассчитай свой доход за месяц",
+            "theme": "Тематика",
+            "default_theme": "Авто и мото",
+            "income": "Предполагаемый доход",
+            "subs": "Количество подписчиков"
+        }, 
+
+        "work_title": "Уже зарабатывают с нами",
+        "work_list": [
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"},
+            {"img": "channel1.svg"}
+        ],
+
         "customers_title": "Что о нас пишут наши клиенты:", 
         "customers_list": [
             {
