fix: a little changes in the project

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -422,15 +422,15 @@
         "start_turnkey_project": "Запустить рекламу под ключ",
         "or": "Или",
         "no_project": "На данный момент у вас нет проектов",
-        "project_types": [
-            {"name": "Мои проекты", "type":"my_project"},
-            {"name": "Проекты с менеджерами", "type":"manager_project"},
-            {"name": "Сохраненные", "type":"saved_project"}
-        ],
-        "subtype_filter": [
-            {"name": "Активные", "type":"active"},
-            {"name": "Выполненные", "type":"complite"}
-        ],
+        "project_types": {
+            "my_project": "Мои проекты",
+            "manager_project": "Проекты с менеджерами",
+            "saved_project": "Сохраненные"
+        },
+        "project_status": {
+            "active": "Активные",
+            "complite": "Выполненные"
+        },
         "sorting": "Сортировака:",
         "date": "По дате",
 
@@ -449,7 +449,37 @@
             "accommodation": "Формат размещения",
             "time": "Время размещения",
             "price": "Цена"
+        },
+        "order_status": {
+            "rejected": {
+                "title": "Владелец канала отклонил вашу заявку",
+                "text": "Ваши средства вернуться на ваш кошелек в течение 12 часов"
+            },
+            "completed":{
+                "title": "Ваш заказ выполнен"
+            },
+            "posted":{
+                "title": "Пост размещен",
+                "text": "Проверьте пост на соответствие"
+            },
+            "accepted":{
+                "title": "Заявка принята",
+                "text": "После размещения поста вы получите уведомление от владельца канала"
+            },
+            "moderation":{
+                "title": "На модерации",
+                "text": "Решение по вашей заявки будет принято в течение ",
+                "span": "24 часов"
+            }
         }
 
+    },
+    "order_btn": {
+        "feedback": "Оставить отзыв",
+        "accept": "Принять",
+        "reject": "Отклонить",
+        "check": "Проверить пост",
+        "see": "ПОсмотреть пост"
     }
 }
+
