fix: assets paths and svg icons colors

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -97,7 +97,7 @@
                 "img": "info2.svg"
             },
            { 
-                "info": "Сэкономленных средств рекламодателя", 
+                "info": "Сэкономленных средств рекламодателей", 
                 "count": "1,01 млрд",
                 "img": "info3.svg"
             },
@@ -259,7 +259,7 @@
         "cta_subtitle": "Открой канал для заказов. Просто. Бèстро. Доходно.",
         "cta_list": [
             {
-                "option": "Постоянно растущие количество рекламодателей для ваших каналов", 
+                "option": "Постоянно растущее количество рекламодателей для ваших каналов", 
                 "img": "option4.svg"
             },
             {   
@@ -267,7 +267,7 @@
                 "img": "option5.svg"
             },
             {
-                "option": "Быстрая и легальная системы вывода средств", 
+                "option": "Быстрая и легальная система вывода средств", 
                 "img": "option6.svg"
             }
         ],
@@ -280,17 +280,17 @@
                 "img": "info1.svg"
             },
            { 
-                "info": "Выполненных заказов ", 
+                "info": "Выполненных заказов", 
                 "count": "42 309+",
                 "img": "info2.svg"
             },
            { 
-                "info": "Сэкономленных средств рекламодателя", 
+                "info": "Заработали владельцы каналов", 
                 "count": "2,93 млрд",
                 "img": "info3.svg"
             },
            { 
-                "info": "Довольных рекламодателей", 
+                "info": "Владельцев каналов уже с нами", 
                 "count": "1230+",
                 "img": "info4.svg"
             }
