feat: add btns in adv my project list

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -422,6 +422,7 @@
         "start_turnkey_project": "Запустить рекламу под ключ",
         "or": "Или",
         "no_project": "На данный момент у вас нет проектов",
+        "no_template": "Сохраняйте свои Рекламные кампании и продолжайте их в любой удобный момент",
         "project_types": {
             "my_project": "Мои проекты",
             "manager_project": "Проекты с менеджерами",
@@ -431,12 +432,16 @@
             "active": "Активные",
             "complite": "Выполненные"
         },
+
         "sorting": "Сортировака:",
         "date": "По дате",
 
         "card": {
             "status": {
-                "1": "В работе"
+                "active": "В работе",
+                "in_dev": "В разработке",
+                "active2": "На согласовании",
+                "complited": "Выполненные"
             },
             "channels": "Каналы",
             "views": "Просмотры",
@@ -469,7 +474,7 @@
             "moderation":{
                 "title": "На модерации",
                 "text": "Решение по вашей заявки будет принято в течение ",
-                "span": "24 часов"
+                "small": "24 часов"
             }
         }
 
@@ -479,7 +484,7 @@
         "accept": "Принять",
         "reject": "Отклонить",
         "check": "Проверить пост",
-        "see": "ПОсмотреть пост"
+        "see": "Посмотреть пост"
     }
 }
 
