fix: renamev myProjectList & etc to ProjectList

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -430,7 +430,9 @@
         },
         "project_status": {
             "active": "Активные",
-            "complite": "Выполненные"
+            "complite": "Выполненные",
+            "develop": "В разработке",
+            "agreed": "На согласовании"
         },
 
         "sorting": "Сортировака:",
@@ -439,8 +441,8 @@
         "card": {
             "status": {
                 "active": "В работе",
-                "in_dev": "В разработке",
-                "active2": "На согласовании",
+                "develop": "В разработке",
+                "agreed": "На согласовании",
                 "complited": "Выполненные"
             },
             "channels": "Каналы",
@@ -458,7 +460,8 @@
         "order_status": {
             "rejected": {
                 "title": "Владелец канала отклонил вашу заявку",
-                "text": "Ваши средства вернуться на ваш кошелек в течение 12 часов"
+                "text": "Ваши средства вернуться на ваш кошелек в течение 12 часов",
+                "text2": "Остаток средств будет возвращен после завершения кампании"
             },
             "completed":{
                 "title": "Ваш заказ выполнен"
@@ -475,6 +478,9 @@
                 "title": "На модерации",
                 "text": "Решение по вашей заявки будет принято в течение ",
                 "small": "24 часов"
+            },
+            "waiting": {
+                "title": "Ожидает ответа от владельца канала"
             }
         }
 
