feat: add all Project types and status to Adv (without pixel perfect)

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -447,6 +447,7 @@
             },
             "channels": "Каналы",
             "views": "Просмотры",
+            "tarif": "Тариф",
             "cost": "Бюджет",
             "see_more": "Развернуть",
             "see_less": "Свернуть"
@@ -481,6 +482,12 @@
             },
             "waiting": {
                 "title": "Ожидает ответа от владельца канала"
+            },
+            "agreed": {
+                "title": "Канал на согласование"
+            },
+            "template": {
+                "title": "Черновик"
             }
         }
 
@@ -490,7 +497,10 @@
         "accept": "Принять",
         "reject": "Отклонить",
         "check": "Проверить пост",
-        "see": "Посмотреть пост"
+        "see": "Посмотреть пост",
+        "change": "Заменить канал",
+        "continue": "Продолжить"
+
     }
 }
 
