feat: change Header's dropdown menu. Move Profile page Adv to Orders page (full rename to reflect semantic meaning), add Offers page and Platform page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -46,12 +46,12 @@
         "addPlatform": "Добавить канал",
         "calculateIncome": "Рассчет доход",
 
-        "campaign": "Мои Рекламные компании",
+        "orders": "Мои Рекламные компании",
         "saved": "Сохранненые",
         "manager": "Работа с менеджерами",
         "template": "Шаблоны постов",
 
-        "channels": "Мои каналы",
+        "platforms": "Мои каналы",
         "offers": "Мои заявки", 
 
         "wallet": "Кошелёк",
@@ -414,7 +414,7 @@
 
     },
 
-    "profile_advertiser": {
+    "orders_advertiser": {
         "my_campaign": "Мои Рекламные кампании",
         "new_project": "Создать проект",
         "start_new_project": "Начать рекламную кампанию",
@@ -490,8 +490,34 @@
                 "title": "Черновик"
             }
         }
+        
 
     },
+
+    "platforms_blogger": {
+        "my_platform": "Мои каналы",
+        "platform_status": {
+            "active": "Активные",
+            "moderation": "На модерации",
+            "cancel": "Отклоненные",
+            "deactivate": "Деактивированные",
+            "ban": "Заблокированные"
+        },
+        "offer_status": {
+            "active": "Активные",
+            "waiting": "В ожидании",
+            "complited": "В ожидании",
+            "moderation": "На модерации",
+            "cancel": "Отклоненные",
+            "deactivate": "Деактивированные",
+            "ban": "Заблокированные"
+        },
+        "no_platform": "На данный момент у вас нет каналов",
+        "no_banned": "У вас нет заблокированных каналов",
+        "no_offers": "На данный момент у вас нет заявок"
+
+    },
+
     "order_btn": {
         "feedback": "Оставить отзыв",
         "accept": "Принять",
@@ -500,7 +526,7 @@
         "see": "Посмотреть пост",
         "change": "Заменить канал",
         "continue": "Продолжить"
-
     }
+
 }
 
