feat: add platformInfo, platformIdentification

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -590,7 +590,13 @@
         "identification": "Идентификация канала",
         "channel_info": "Информация о площадке",
         "choose_platform": "Выберите платформу",
-        "paste_link": "Ссылка на площадку"
+        "paste_link": "Ссылка на площадку",
+        "category": "Выберите категорию площадки",
+        "languages": "Выберите язык",
+        "region": "Выберите регион",
+        "sex": "Соотношение полов вашей аудитории, %",
+        "age": "Выберите возраст вашей аудитории",
+        "default_value": "Не выбрано"
     },
 
     "add_platform_btn": {
