feat: add Platform Page (without pixcel perfect)

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -591,19 +591,64 @@
         "channel_info": "Информация о площадке",
         "choose_platform": "Выберите платформу",
         "paste_link": "Ссылка на площадку",
-        "category": "Выберите категорию площадки",
-        "languages": "Выберите язык",
-        "region": "Выберите регион",
-        "sex": "Соотношение полов вашей аудитории, %",
-        "age": "Выберите возраст вашей аудитории",
-        "default_value": "Не выбрано"
+        "category": {
+            "title": "Выберите категорию площадки",
+            "text": ""
+        },
+        "languages": {
+            "title": "Выберите язык",
+            "text": ""
+        },
+        "region": {
+            "title": "Выберите регион",
+            "text": ""
+        },
+        "sex": {
+            "title": "Соотношение полов вашей аудитории, %",
+            "text": ""
+        },
+        "age": {
+            "title": "Выберите возраст вашей аудитории",
+            "text": ""
+        },
+        "description": {
+            "title": "Описание вашей площадки",
+            "text": ""
+        },
+        "price": {
+            "title": "Выбери формат размещения и  укажите цену",
+            "info": "О различиях в форматах размещения и назначение стоимости вы можете узнать в инструкции",
+            "text": "",
+            "default": "Укажите цену"
+        },
+        "symbol": {
+            "title": "Количество символов в посту",
+            "text": ""
+        },
+        "default_value": "Не выбрано",
+        "choosed": "Выбрано",
+        "from": "из",
+        "default_input": "Опишите особенности, которые будут выделять ваш канал среди других. ",
+
+        "create": {
+            "send": "Ваша заявка отправлена!",
+            "moderation": "Дорогой пользователь, ваша заявка на добавление канала была отправлена на проверку модератору.",
+            "answer": {
+                "text1": "Ответ придет",
+                "span": "в течение 24 часов",
+                "text2": "с момента отправки"
+            }
+        }
     },
 
     "add_platform_btn": {
         "telegram": "Telegram",
         "instagram": "Instagram",
         "youtube": "Youtube",
-        "check": "Проверить"
+        "check": "Проверить",
+        "save": "Сохранить",
+        "create": "Отправить заявку",
+        "accept": "Принять"
     },
 
     "order_btn": {
