feat: add AI Filter

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -752,9 +752,15 @@
     "catalog": {
         "catalog": "Каталог площадок", 
         "all_platform": "Площадки",
+        
         "search": {
             "parameters": "Параметры поиска",
             "AI": "Автоподбор с ИИ"
+        },
+
+        "ai": {
+            "title": "Опишите вашу рекламную компанию",
+            "default_input": "Расскажите о вашем брэнде и о продукте , который вы планируете рекламировать"
         },
 
         "category":{
@@ -777,8 +783,9 @@
             "title": "Язык:",
             "default_value": "sample"
         },
-        "recommendation": "Рекомендованные ЦА"
-
+        "recommendation": "Рекомендованные ЦА",
+        
+        "generation_btn": "Сгенерировать"
 
     },
 
