feat: add Cart Page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -783,10 +783,27 @@
             "title": "Язык:",
             "default_value": "sample"
         },
-        "recommendation": "Рекомендованные ЦА",
+        "recomendation": "Рекомендованные ЦА",
         
         "generation_btn": "Сгенерировать"
 
+    },
+
+    "cart": {
+        "cart": "Корзина",
+
+        "create_post": {
+            "title": "Заказ защищён безопасной сделкой",
+            "text": "Владелец площадки получит оплату только после вашего подтверждения об успешном размещении", 
+            "subscribers": "Всего подписчиков",
+            "views": "Всего просмотров",
+            "commission": "Комиссия сервиса",
+            "finnaly": "Итоговая сумма"
+        },
+
+        "recomendation": "Рекомендуемые площадки",
+        "hide": "скрыть",
+        "show": "показать"
     },
 
     "filter": {
@@ -841,7 +858,12 @@
         "repeat": "Повторить заявку",
         "activate": "Активировать",
         "support": "Техническая поддержка"
-    }
+    },
 
+    "cart_btn": {
+        "save": "Сохранить",
+        "add": "Добавить ещё",
+        "create_post": "Создать пост"
+    }
 }
 
