--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -792,6 +792,14 @@
         "error": {
           "required": "неверный формат, количество символов - 16"
         }
+      },
+      "card_date": {
+        "title": "Срок действия карты",
+        "default_value": "мм/гг",
+        "description": "",
+        "error": {
+          "required": "введите дату по формату - мм/гг: 09/23"
+        }
       }
     },
     "contact": {
